--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+html, body {
+    /* height: 100%; */
+    height: 100vh;
+}
 body {
     display: flex;
     flex-direction: column;
