gave the main a flex grow, shrink & basis, to stick the footer to the bottom of the viewport. Will explain process in readme

--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ header {
 main {
     background-color: palegoldenrod;
     padding: 10px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: auto;
 }
 p {
     padding: 10px;
