gave the html & body a full height of 100%. You can also use vh which is a new unit than % in css, both have the same outcome

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     margin: 0;
     padding: 0;
 }
+html, body {
+    height: 100%;
+    /* height: 100vh; */
+}
 body {
     display: grid;
     border: 5px solid red;
