added a grid-template row to the body which adjusts the main selector to take up the majority of content space, and the header & footer to automatically adust evenly around the main content

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body {
 body {
     display: grid;
     border: 5px solid red;
+    grid-template-rows: auto 1fr auto;
 }
 header {
     background-color: gold;
